5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1573_579.log
== TEST (2019-05-02 10:57:49) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:58:10) 
-- CODE:
print("A UFAM tem", (2016 - 1909), "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:58:33) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:58:42) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:58:51) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:59:20) 
-- CODE:
print("A UFAM tem", 2016 -- 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 3925 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:59:36) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:59:38) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- EXECUTION TIME:
0.213577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - 1909 , "anos de funda\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:00:38) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:01:19) 
-- CODE:
print("A UFAM tem", 2016-1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:01:23) 
-- CODE:
print("A UFAM tem", 2016-1909 , "anos de fundação")
-- EXECUTION TIME:
0.131696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016-1909 , "anos de funda\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:01:30) 
-- CODE:
print("A UFAM tem", 2016-1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:01:43) 
-- CODE:
print("A UFAM tem", 2016_1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 20161909 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:01:55) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:02:24) 
-- CODE:
x = 2016 - 1909
print("A UFAM tem", x , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:02:52) 
-- CODE:
x = (2016-1909)
print("A UFAM tem", x , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:03:11) 
-- CODE:
x = (2016-1909)
print("A UFAM tem", x , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:03:39) 
-- CODE:
x = (2016-1909)
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:03:50) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:05:09) 
-- CODE:
print("A UFAM tem, 2016 - 1909 , anos de fundação")
-- OUTPUT:
A UFAM tem, 2016 - 1909 , anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:05:26) 
-- CODE:
print("A UFAM tem', 2016 - 1909 , 'anos de fundação")
-- OUTPUT:
A UFAM tem', 2016 - 1909 , 'anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:05:39) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:05:55) 
-- CODE:
print("A UFAM tem", 2016 "-" 1909 , "anos de fundação")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 "-" 1909 , "anos de fundação")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:06:06) 
-- CODE:
print("A UFAM tem", 2016-1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:06:13) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:06:34) 
-- CODE:
print("A UFAM tem", 2016 -1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:07:27) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação.")
-- OUTPUT:
A UFAM tem 107 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:07:42) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , " anos de fundação.")
-- OUTPUT:
A UFAM tem 107  anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:07:50) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:07:55) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação.")
-- EXECUTION TIME:
0.185819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - 1909 , "anos de funda\xe7\xe3o.")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:07:56) 
-- CODE:
print("A UFAM tem", 2016 - 1909 , "anos de fundação.")
-- OUTPUT:
A UFAM tem 107 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:08:48) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:08:55) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.18792
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
